--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "react custome hooks collection",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Puskar Adhikari <puskar.ad@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.7.3"
   }
 }
