--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-custome-hooks",
   "version": "1.0.0",
   "description": "react custome hooks collection",
-  "main": "index.js",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
+  "types": "./lib/esm/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:esm && npm run build:cjs",
