--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-custome-hooks",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "react custome hooks collection",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -17,12 +17,10 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "typescript": "^4.7.3"
   },
   "peerDependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "^18.1.0"
   },
   "files": [
     "/lib"
