--- a/example/package.json
+++ b/example/package.json
@@ -11,11 +11,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.1.0",
+    "react-custome-hooks": "^1.0.1",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "react-custome-hooks": "link:.."
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
