--- a/package.json
+++ b/package.json
@@ -14,10 +14,20 @@
   "author": "Puskar Adhikari <puskar.ad@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "react": "^18.1.0",
-    "typescript": "^4.7.3"
+    "add": "^2.0.6",
+    "jest": "^29.5.0",
+    "or": "^0.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^4.7.3",
+    "yarn": "^1.22.19"
   },
   "peerDependencies": {
     "react": "^18.1.0"
