build: added  config for jest test

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/thepuskar/react-hooks"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Puskar Adhikari <https://www.puskaradhikari.com.np/>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/thepuskar/react-hooks/issues"
