--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir lib/cjs"
+    "build:cjs": "tsc --module commonjs --outDir lib/cjs",
+    "test": "jest"
   },
   "author": "Puskar Adhikari <puskar.ad@gmail.com>",
   "license": "ISC",
@@ -22,10 +22,13 @@
     "@types/react-dom": "^18.0.5",
     "add": "^2.0.6",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.2.5",
+    "tsconfig-paths-jest": "^0.0.1",
     "typescript": "^4.7.3",
     "yarn": "^1.22.19"
   },
@@ -34,5 +37,8 @@
   },
   "files": [
     "/lib"
-  ]
+  ],
+  "dependencies": {
+    "@testing-library/react-hooks": "^8.0.1"
+  }
 }
